<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    app:contentPadding="25dp"
    tools:context=".ui.navigations.registerFlow.LoginAndRegisterActivity">

    <ImageView
        android:id="@+id/ic_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="50dp"
        android:padding="8dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/input_email"
        android:textSize="@dimen/text_size_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_close" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input"
 android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="0dp"
        android:hint="@string/hint_email"
        android:gravity="start|center"
        android:layout_height="90dp"
        android:layout_marginTop="22dp"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/label"
        app:layout_constraintRight_toRightOf="@+id/label"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tv_error"
        tools:text="Erro encontrado"
        android:textSize="16sp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="26dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/input"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/btn_back"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/voltar"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_next" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_button_circle_gradient"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
