<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icone_user"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_round_account_circle" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:gravity="start|center"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintRight_toLeftOf="@+id/tv_exit"
            app:layout_constraintBottom_toBottomOf="@+id/icone_user"
            app:layout_constraintLeft_toRightOf="@+id/icone_user"
            app:layout_constraintTop_toTopOf="@+id/icone_user"
            tools:text="João Victor" />

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:gravity="start|center"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/icone_user"
            app:layout_constraintLeft_toRightOf="@+id/tv_name"
            app:layout_constraintTop_toTopOf="@+id/icone_user"
            android:text="@string/sair" />





        <androidx.cardview.widget.CardView
            android:id="@+id/card_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icone_user">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title"
            style="@style/ScreenTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_search" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_users"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:listitem="@layout/list_item_user" />

        <TextView
            android:id="@+id/tv_error"
            style="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/error"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>