<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:context=".ui.navigations.registerFlow.LoginAndRegisterActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_round_account_circle_color_primary" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <TextView
                    android:id="@+id/text_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/login"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:lines="1"
                    android:maxLines="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_username"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:lines="1"
                    android:maxLines="1"
                    android:layout_marginTop="18dp"
                    android:hint="@string/username"
                    app:layout_constraintTop_toBottomOf="@+id/text_login">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="18dp"
                    android:hint="@string/password"
                    app:layout_constraintTop_toBottomOf="@+id/layout_input_username"
                    app:passwordToggleEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_input_password"
                    app:layout_constraintBottom_toTopOf="@+id/btn_login"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="Erro ao logar" />

                <ProgressBar
                    android:id="@+id/pb_load"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_login"
                    app:layout_constraintBottom_toTopOf="@+id/tv_register"
                    app:layout_constraintLeft_toLeftOf="@+id/btn_login"
                    app:layout_constraintRight_toRightOf="@+id/btn_login"
                    app:layout_constraintTop_toTopOf="@+id/btn_login" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/shape_button_circle_gradient"
                    android:paddingStart="50dp"
                    android:paddingEnd="50dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/tv_register"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_input_password" />

                <TextView
                    android:id="@+id/tv_register"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@string/n_o_possui_uma_conta_cadastre_aqui"
                    android:textAllCaps="false"
                    android:textColor="@color/colorLetter"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="52dp"
            android:layout_height="52dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_round_account_circle_color_primary" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
